Módulo de esqueci senha + eslint geral
