# src/modules/auth/dto/change-password.dto.ts
@@ -1,0 +1,25 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsNotEmpty, IsString, MinLength, Matches } from 'class-validator';
+
+export class ChangePasswordDto {
+  @ApiProperty({
+    description: 'Senha atual do usuário',
+    example: 'SenhaAtual123!',
+  })
+  @IsString({ message: 'Senha atual deve ser uma string' })
+  @IsNotEmpty({ message: 'Senha atual é obrigatória' })
+  currentPassword: string;
+
+  @ApiProperty({
+    description: 'Nova senha do usuário',
+    example: 'NovaSenha123!',
+  })
+  @IsString({ message: 'Nova senha deve ser uma string' })
+  @IsNotEmpty({ message: 'Nova senha é obrigatória' })
+  @MinLength(8, { message: 'Nova senha deve ter pelo menos 8 caracteres' })
+  @Matches(/^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]/, {
+    message:
+      'Nova senha deve conter pelo menos uma letra maiúscula, uma minúscula, um número e um caractere especial',
+  })
+  newPassword: string;
+}
