# src/modules/auth/dto/forgot-password.dto.ts
@@ -1,0 +1,12 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsEmail, IsNotEmpty } from 'class-validator';
+
+export class ForgotPasswordDto {
+  @ApiProperty({
+    description: 'Email do usuário para recuperação de senha',
+    example: 'usuario@exemplo.com',
+  })
+  @IsEmail({}, { message: 'Email inválido' })
+  @IsNotEmpty({ message: 'Email é obrigatório' })
+  email: string;
+}
