# src/modules/auth/dto/reset-password.dto.ts
@@ -1,0 +1,31 @@
+import { ApiProperty } from '@nestjs/swagger';
+import {
+  IsNotEmpty,
+  IsString,
+  MinLength,
+  Matches,
+  IsUUID,
+} from 'class-validator';
+
+export class ResetPasswordDto {
+  @ApiProperty({
+    description: 'Token de recuperação de senha',
+    example: '123e4567-e89b-12d3-a456-426614174000',
+  })
+  @IsUUID('4', { message: 'Token inválido' })
+  @IsNotEmpty({ message: 'Token é obrigatório' })
+  token: string;
+
+  @ApiProperty({
+    description: 'Nova senha do usuário',
+    example: 'NovaSenha123!',
+  })
+  @IsString({ message: 'Senha deve ser uma string' })
+  @IsNotEmpty({ message: 'Senha é obrigatória' })
+  @MinLength(8, { message: 'Senha deve ter pelo menos 8 caracteres' })
+  @Matches(/^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]/, {
+    message:
+      'Senha deve conter pelo menos uma letra maiúscula, uma minúscula, um número e um caractere especial',
+  })
+  newPassword: string;
+}
